--- a/Deploy_OPNAV_ADDS_Solution/Deploy_OPNAV_ADDS_Project/data/appServer1Vm.json
+++ b/Deploy_OPNAV_ADDS_Solution/Deploy_OPNAV_ADDS_Project/data/appServer1Vm.json
@@ -14,12 +14,6 @@
         "description": "The name of the Administrator of the new VMs and Domain"
       }
     },
-    "assetLocation": {
-      "type": "string",
-      "metadata": {
-        "description": "The location of resources that the script is dependent on such as linked templates and DSC modules"
-      }
-    },
     "dataDiskSize": {
       "type": "int",
       "metadata": {
@@ -59,12 +53,10 @@
     },
     "vmSize": {
       "type": "string",
-      "defaultValue": "Standard_DS12_v2",
-      "allowedValues": [
-        "Standard_DS12_v2",
-        "Standard_A2",
-        "Standard_DS2_v2"
-      ]
+      "metadata": {
+        "description": "The size of the AD VMs Created"
+      },
+      "defaultValue": "Standard_A2"
     },
     "windowsImageOffer": {
       "type": "string",
@@ -82,12 +74,15 @@
     },
     "windowsImageSKU": {
       "type": "string",
-      "defaultValue": "2019-Datacenter",
       "allowedValues": [
         "2012-R2-Datacenter",
         "2016-Datacenter",
-        "2019-Datacenter"
-      ]
+        "2008-R2-SP1"
+      ],
+      "metadata": {
+        "description": "The SKU Name of Windows Image"
+      },
+      "defaultValue": "2016-Datacenter"
     },
     "windowsImageVersion": {
       "type": "string",
@@ -95,12 +90,6 @@
         "description": "The Version of Windows Image"
       },
       "defaultValue": "latest"
-    },
-    "adAvailabilitySetName": {
-      "type": "string",
-      "metadata": {
-        "description": "Availability set for AD VMs"
-      }
     }
   },
   "variables": {
@@ -118,7 +107,7 @@
       "name": "[parameters('NicName')]",
       "type": "Microsoft.Network/networkInterfaces",
       "location": "[resourceGroup().location]",
-      "apiVersion": "2018-12-01",
+      "apiVersion": "2015-05-01-preview",
       "properties": {
         "ipConfigurations": [
           {
@@ -145,9 +134,6 @@
       "properties": {
         "hardwareProfile": {
           "vmSize": "[parameters('vmSize')]"
-        },
-        "availabilitySet": {
-          "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('adAvailabilitySetName'))]"
         },
         "osProfile": {
           "computerName": "[parameters('vmName')]",
@@ -197,9 +183,9 @@
         "status": "Enabled",
         "taskType": "ComputeVmShutdownTask",
         "dailyRecurrence": {
-          "time": "1700"
+          "time": "2100"
         },
-        "timeZoneId": "Eastern Standard Time",
+        "timeZoneId": "Mountain Standard Time",
         "notificationSettings": {
           "status": "Disabled",
           "timeInMinutes": 15
